Bug 194088 - konsole does not respect Qt's "global strut" setting for its scrollbar
Summary: konsole does not respect Qt's "global strut" setting for its scrollbar
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: LO minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-25 22:58 UTC by Heinz Wiesinger
Modified: 2010-01-07 01:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heinz Wiesinger 2009-05-25 22:58:37 UTC
Version:            (using KDE 4.2.2)
Installed from:    Compiled From Sources

By specifying values for Qt's "global strut" setting, one can influence the size of certain interface element, like the scrollbar. (to be found in qtconfig -> interface -> global strut)
When using Oxygen style and setting "Minimum Width" to "20 pixels", every (Qt,KDE) application shows bigger scrollbars, except konsole.
Comment 1 Kurt Hindenburg 2009-09-01 05:30:09 UTC
Changing this setting didn't seem to work on Konqueror's scrollbar width.

There is an option under KDE->Settings->Appearance->Style->Configure->Scrollbar Width which does work (after a restart of the app).

Using Qt version 4.5.2 in /usr/lib
Comment 2 Heinz Wiesinger 2009-09-01 08:03:52 UTC
"Global Strut" is working fine here in konqueror, both on the horizontal/vertical sliders, as well as the sliders in textareas.

I looked in system settings and the Oxygen style doesn't have a setting for configuring the scrollbar width, at least in kde-4.2.4. Is this a new option for kde-4.3.0?
Comment 3 Christoph Feck 2010-01-06 20:38:36 UTC
Yes, the option is new, still this bug is valid. I will look into this.
Comment 4 Christoph Feck 2010-01-07 01:01:18 UTC
SVN commit 1070887 by cfeck:

Use sizeHint() instead of pixelMetric() to get scroll bar size

BUG: 194088


 M  +2 -4      TerminalDisplay.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070887
Comment 5 Christoph Feck 2010-01-07 01:02:59 UTC
SVN commit 1070888 by cfeck:

Use sizeHint() instead of pixelMetric() to get scroll bar size (backport r1070887)

CCBUG: 194088


 M  +2 -4      TerminalDisplay.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070888