Use sizeHint() instead of pixelMetric() to get scroll bar size

BUG: 194088

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1070887